# Game

./: .gitignore  CMakeLists.txt  readme.md
assets/Background/: desktop.ini
assets/Monster/: desktop.ini
headers/: Game.h  Player.h  Player.hpp
src/: Bullet.cpp  Bullet.h  Game.cpp  Monster.cpp  Monster.h  Photo.cpp  Photo.h  Player.cpp  Player.h  main.cpp
src_1/: Player.cpp  Player.h  main.cpp
src_1/header/: Player.h
